log
Thu 07 Sep 2023 05:29:06 PM UTC: 
 tests:  0|6
total_score: 0/70
e089429
Thu 07 Sep 2023 05:34:50 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:12: error: unused variable ‘map’ [-Werror=unused-variable]
   55 |   HashMap* map = (HashMap*)malloc(sizeof(HashMap));
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
674ed49
Thu 07 Sep 2023 05:37:59 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:8: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   61 |     map->buckets[i]=NULL;
      |     ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5670af6
Thu 07 Sep 2023 05:39:22 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
e7a2304
Thu 07 Sep 2023 06:04:03 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:12: error: too few arguments to function ‘hash’
   43 |   long i = hash(key)%map->capacity;
      |            ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
hashmap.c:48:15: error: array subscript is not an integer
   48 |   map->buckets[index] = newPair;
      |               ^
hashmap.c:43:8: error: unused variable ‘i’ [-Werror=unused-variable]
   43 |   long i = hash(key)%map->capacity;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
0a8885f
Thu 07 Sep 2023 06:04:43 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:12: error: too few arguments to function ‘hash’
   43 |   long i = hash(key)%map->capacity;
      |            ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
Compilation failed
f7d0281
